Overflow scrolling fix for Firefox, fixes #879

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ img {
 .main {
   margin-top: 80px;
   margin: 5px;
+  min-height: 0;
 }
 
 .drawer {
